[package]
name = "clustering"
version = "0.1.0"
edition = "2021"
default-run = "clustering"

[dependencies]
rand = "0.8.5"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
plotters = "0.3.3"
kmedoids = "0.4.3"
csv = "1.2.2"
serde = { version = "1.0.9", features = ["derive"] }
base64 = "0.21.2"

[[bin]]
name = "parser"
path = "src/parser.rs"
