[package]
name = "clustering"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
rand = "0.8.5"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
plotters = "0.3.3"
kmedoids = "0.4.3"
petal-neighbors = "0.8.0"
csv = "1.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.2"

pathfinding = "4.3.0"

# constrained kmedoids deps 
num-traits = "0.2.9"
mcmf = "2.0.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "clustering"
harness = false

[[bench]]
name = "hierarchy"
harness = false
